feat: Update link handlers for doctors to list patients properly
