# apps/backend/internal/server/docs/swagger.json
@@ -1091,16 +1091,10 @@
         "server.PatientsResponse": {
             "type": "object",
             "properties": {
-                "patients": {
+                "rows": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/server.patientDTO"
-                    }
-                },
-                "pendingLinks": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/server.linkDTO"
+                        "$ref": "#/definitions/server.patientRowDTO"
                     }
                 }
             }
@@ -1293,6 +1287,17 @@
                 },
                 "patientCode": {
                     "type": "string"
+                }
+            }
+        },
+        "server.patientRowDTO": {
+            "type": "object",
+            "properties": {
+                "link": {
+                    "$ref": "#/definitions/server.linkDTO"
+                },
+                "patient": {
+                    "$ref": "#/definitions/server.patientDTO"
                 }
             }
         },
